--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,13 @@ autopep8==1.6.0
 cachetools==4.2.2
 certifi==2022.6.15
 charset-normalizer==2.1.0
+click==8.1.3
+Flask==2.1.3
 idna==3.3
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 numpy==1.23.1
 pandas==1.4.3
 pycodestyle==2.8.0
@@ -20,3 +26,5 @@ tornado==6.2
 tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.10
+Werkzeug==2.2.0
+zipp==3.8.1
